WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243824
WebKit::terminateWithReason() is declared in WebKit/Platform/spi, but defined in WebKit/Shared
https://bugs.webkit.org/show_bug.cgi?id=243824
Summary
WebKit::terminateWithReason() is declared in WebKit/Platform/spi, but defined...
Kimmo Kinnunen
Reported
2022-08-11 07:08:25 PDT
WebKit::terminateWithReason() is declared in WebKit/Platform/spi, but defined in WebKit/Shared Problems: - IPC:: uses WebKit::terminateWithReason(), but terminateWithReason() is not implemented in WebKit/Platform - WebKit::terminateWithReason() is declared in a SPI header. Typically SPI headers only declare the SPI. - WebKit::terminateWithReason() is defined in a surprising file (ProcessLauncherCocoa.mm) The layering violation of WebKit/Platform depending on WebKit/Shared implementation is making it hard to compile a version of IPC that does not depend on WebKit:: other that WebKit/Platform.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-11 07:09:51 PDT
<
rdar://problem/98506618
>
Kimmo Kinnunen
Comment 2
2022-08-11 07:29:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3219
EWS
Comment 3
2022-08-16 01:22:30 PDT
Committed
253461@main
(7e6b014c2242): <
https://commits.webkit.org/253461@main
> Reviewed commits have been landed. Closing PR #3219 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug