Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm
@@ -32,8 +32,8 @@
 #import "Logging.h"
 #import "MachMessage.h"
 #import "MachUtilities.h"
-#import "ReasonSPI.h"
 #import "WKCrashReporter.h"
+#import "XPCUtilities.h"
 #import <WebCore/AXObjectCache.h>
 #import <mach/mach_error.h>
 #import <mach/vm_map.h>
